feat: deployment batch operations

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "onCommand:stellarSuite.deployContract",
     "onCommand:stellarSuite.buildContract",
     "onCommand:stellarSuite.configureCli",
-    "onCommand:stellarSuite.refreshContracts"
+    "onCommand:stellarSuite.refreshContracts",
+    "onCommand:stellarSuite.deployBatch"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -61,6 +62,11 @@
         "command": "stellarSuite.refreshContracts",
         "title": "Refresh",
         "icon": "$(refresh)"
+      },
+      {
+        "command": "stellarSuite.deployBatch",
+        "title": "Stellar Suite: Deploy Batch",
+        "icon": "$(cloud-upload)"
       },
       {
         "command": "stellarSuite.deployFromSidebar",
@@ -138,19 +144,19 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile",
-    "test": "npm run test:cli-errors && npm run test:version-tracker && npm run test:state-validation",
-    "test:cli-errors": "tsc --module commonjs --target ES2020 --lib ES2020,DOM --esModuleInterop --skipLibCheck --rootDir src --outDir out-test src/utils/cliErrorParser.ts src/test/cliErrorParser.test.ts && node out-test/test/cliErrorParser.test.js",
+    "test": "npm run test:cli-errors && npm run test:version-tracker && npm run test:state-validation && npm run test:cargo-metadata && npm run test:batch-deps",    "test:cli-errors": "tsc --module commonjs --target ES2020 --lib ES2020,DOM --esModuleInterop --skipLibCheck --rootDir src --outDir out-test src/utils/cliErrorParser.ts src/test/cliErrorParser.test.ts && node out-test/test/cliErrorParser.test.js",
     "test:version-tracker": "tsc --module commonjs --target ES2020 --lib ES2020,DOM --esModuleInterop --skipLibCheck --rootDir src --outDir out-test src/utils/versionParser.ts src/services/contractVersionTracker.ts src/test/versionTracker.test.ts && node out-test/test/versionTracker.test.js",
-    "test:state-validation": "tsc --module commonjs --target ES2020 --lib ES2020,DOM --esModuleInterop --skipLibCheck --rootDir src --outDir out-test src/utils/stateIntegrity.ts src/services/stateValidationService.ts src/test/stateValidationService.test.ts && node out-test/test/stateValidationService.test.js"
-    "test": "npm run test:cli-errors && npm run test:version-tracker && npm run test:cargo-metadata",
-    "test:cli-errors": "tsc --module commonjs --target ES2020 --lib ES2020,DOM --esModuleInterop --skipLibCheck --rootDir src --outDir out-test src/utils/cliErrorParser.ts src/test/cliErrorParser.test.ts && node out-test/test/cliErrorParser.test.js",
-    "test:version-tracker": "tsc --module commonjs --target ES2020 --lib ES2020,DOM --esModuleInterop --skipLibCheck --rootDir src --outDir out-test src/utils/versionParser.ts src/services/contractVersionTracker.ts src/test/versionTracker.test.ts && node out-test/test/versionTracker.test.js",
-    "test:cargo-metadata": "tsc --module commonjs --target ES2020 --lib ES2020,DOM --esModuleInterop --skipLibCheck --rootDir src --outDir out-test src/utils/cargoTomlParser.ts src/services/contractMetadataService.ts src/test/cargoTomlParser.test.ts && node out-test/test/cargoTomlParser.test.js"
+    "test:state-validation": "tsc --module commonjs --target ES2020 --lib ES2020,DOM --esModuleInterop --skipLibCheck --rootDir src --outDir out-test src/utils/stateIntegrity.ts src/services/stateValidationService.ts src/test/stateValidationService.test.ts && node out-test/test/stateValidationService.test.js",
+    "test:cargo-metadata": "tsc --module commonjs --target ES2020 --lib ES2020,DOM --esModuleInterop --skipLibCheck --rootDir src --outDir out-test src/utils/cargoTomlParser.ts src/services/contractMetadataService.ts src/test/cargoTomlParser.test.ts && node out-test/test/cargoTomlParser.test.js",
+    "test:batch-deps": "tsc --module commonjs --target ES2020 --lib ES2020,DOM --esModuleInterop --skipLibCheck --rootDir src --outDir out-test src/services/deploymentDependencyResolver.ts src/test/deploymentDependencyResolver.test.ts && node out-test/test/deploymentDependencyResolver.test.js",
+    "test:batch-deploy": "tsc --module commonjs --target ES2020 --lib ES2020,DOM --esModuleInterop --skipLibCheck --rootDir src --outDir out-test src/services/batchDeploymentService.ts src/test/batchDeploymentService.test.ts && node out-test/test/batchDeploymentService.test.js"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/vscode": "^1.80.0",
     "typescript": "^5.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vscode": "^1.1.37"
+  }
 }
