--- a/.vscodeignore
+++ b/.vscodeignore
@@ -8,3 +8,29 @@ vsc-extension-quickstart.md
 **/.eslintrc.json
 **/*.map
 **/*.ts
+node_modules/**
+out-test/**
+frontend/**
+frontend-issues/**
+issue-details/**
+template-issues/**
+templates/**
+docs/**
+scripts/**
+ISSUES.md
+BUILD.md
+/stellar-suite
+*.vsix
+.git/**
+.eslintrc.json
+.prettierrc
+.prettierignore
+*.log
+.DS_Store
+*.test.ts
+*.test.js
+**/test/**
+**/tests/**
+**/__tests__/**
+**/*.spec.ts
+**/*.spec.js
