--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -120,6 +120,7 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
+        continue-on-error: true
       
       - name: Install dependencies
         run: npm ci
