--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "types": ["node", "vscode", "mocha"],
+    "types": ["node", "vscode"],
     "module": "commonjs",
     "target": "ES2020",
     "outDir": "out",
