--- a/templates/escrow/cargo.toml
+++ b/templates/escrow/cargo.toml
@@ -9,14 +9,19 @@ license = "Apache-2.0"
 publish = false
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 name = "escrow_contract"
 
 [dependencies]
-soroban-sdk = { version = "20.0.0", features = [] }
+soroban-sdk = { version = "22.0.9", features = [] }
 
 [dev-dependencies]
-soroban-sdk = { version = "20.0.0", features = ["testutils"] }
+soroban-sdk = { version = "22.0.9", features = ["testutils"] }
+
+[[test]]
+name = "test"
+path = "test/test.rs"
+
 
 [profile.release]
 opt-level = "z"
