--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "stellar-suite",
-  "displayName": "Stellar Suite",
+  "name": "stellar-kit",
+  "displayName": "Stellar Kit",
   "description": "Improves the developer experience when building smart contracts on Stellar. Build, deploy, and manage contracts directly from VS Code.",
   "version": "0.1.0",
-  "publisher": "stellar-suite",
-  "icon": "ico.png",
+  "publisher": "0xVida",
+  "icon": "icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/0xVida/stellar-suite.git"
